<resources>
    <string name="app_name">ListMovie</string>
    <string name="lorem">lorem ipsum dolor sit amet</string>
    <string name="tab1">Movies</string>
    <string name="tab2">Tv Show</string>
    <string name="setting">Change Languange Setting</string>

    <string-array name="filmData">
        <item>Avenger: Infinity War</item>
        <item>Jurrasic Galaxy</item>
        <item>Mission Impossible: Fallout</item>
        <item>Spider-Man: Into the Spider-Verse</item>
        <item>Deadpool 2</item>
        <item>The Hopeful Romantic</item>
        <item>Aquaman</item>
        <item>A Star Is Born</item>
        <item>Black Panther</item>
        <item>Venom</item>
    </string-array>

    <string-array name="tvShowData">
        <item>Bird Box</item>
        <item>Bohemian Rhapsody</item>
        <item>Bumblebee</item>
        <item>Creed II</item>
        <item>How to Train Your Dragon: The Hidden World</item>
        <item>Dragonball Z: Broly</item>
        <item>Glass</item>
        <item>Hunter Killer</item>
        <item>Mary Poppins Returns</item>
        <item>Preman Pensiun</item>
    </string-array>

    <integer-array name="tvShowFoto">
        <item>@drawable/poster_birdbox</item>
        <item>@drawable/poster_bohemian</item>
        <item>@drawable/poster_bumblebee</item>
        <item>@drawable/poster_creed</item>
        <item>@drawable/poster_dragon</item>
        <item>@drawable/poster_dragonball</item>
        <item>@drawable/poster_glass</item>
        <item>@drawable/poster_hunterkiller</item>
        <item>@drawable/poster_marrypopins</item>
        <item>@drawable/poster_preman</item>
    </integer-array>

    <string-array name="tvShowDesc">
        <item>Five years after an ominous unseen presence drives most of society to suicide, a survivor and her two children make a desperate bid to reach safety.</item>
        <item>Singer Freddie Mercury, guitarist Brian May, drummer Roger Taylor and bass guitarist John Deacon take the music world by storm when they form the rock n roll band Queen in 1970. Hit songs become instant classics. When Mercurys increasingly wild lifestyle starts to spiral out of control, Queen soon faces its greatest challenge yet – finding a way to keep the band together amid the success and excess.</item>
        <item>On the run in the year 1987, Bumblebee finds refuge in a junkyard in a small Californian beach town. Charlie, on the cusp of turning 18 and trying to find her place in the world, discovers Bumblebee, battle-scarred and broken. When Charlie revives him, she quickly learns this is no ordinary yellow VW bug.</item>
        <item>Between personal obligations and training for his next big fight against an opponent with ties to his familys past, Adonis Creed is up against the challenge of his life.</item>
        <item>As Hiccup fulfills his dream of creating a peaceful dragon utopia, Toothless’ discovery of an untamed, elusive mate draws the Night Fury away. When danger mounts at home and Hiccup’s reign as village chief is tested, both dragon and rider must make impossible decisions to save their kind.</item>
        <item>As Goku investigates the destruction of the Southern Galaxy, Vegeta is taken to be King of the New Planet Vegeta, and to destroy the Legendary Super Saiyan, Broly.</item>
        <item>In a series of escalating encounters, former security guard David Dunn uses his supernatural abilities to track Kevin Wendell Crumb, a disturbed man who has twenty-four personalities. Meanwhile, the shadowy presence of Elijah Price emerges as an orchestrator who holds secrets critical to both men.</item>
        <item>Captain Glass of the USS Arkansas discovers that a coup détat is taking place in Russia, so he and his crew join an elite group working on the ground to prevent a war.</item>
        <item>In Depression-era London, a now-grown Jane and Michael Banks, along with Michaels three children, are visited by the enigmatic Mary Poppins following a personal loss. Through her unique magical skills, and with the aid of her friend Jack, she helps the family rediscover the joy and wonder missing in their lives.</item>
        <item>After three years, the business of Muslihat (Epi Kusnandar), who has retired as a thug, has a problem. Sales decline. Muslihat also faces new problems when Safira (Safira Maharani), her only daughter, grows up in adolescence and begins to be visited by boys. A bigger problem: frictions between his former subordinates.</item>
    </string-array>

    <string-array name="ratingTvShow">
        <item>69%</item>
        <item>80%</item>
        <item>65%</item>
        <item>68%</item>
        <item>77%</item>
        <item>72%</item>
        <item>65%</item>
        <item>64%</item>
        <item>66%</item>
        <item>65%</item>

    </string-array>

    <string-array name="rilisTvShow">
        <item>12 November 2018</item>
        <item>24 October 2018</item>
        <item>15 December 2018</item>
        <item>21 November 2018</item>
        <item>03 January 2019</item>
        <item>16 March 1993</item>
        <item>16 January 2019</item>
        <item>19 October 2018</item>
        <item>13 December 2018</item>
        <item>17 January 2019</item>
    </string-array>

    <string-array name="descData">
        <item>As the Avengers and their allies have continued to protect the world from threats too large for any one hero to handle, a new danger has emerged from the cosmic shadows: Thanos. A despot of intergalactic infamy, his goal is to collect all six Infinity Stones, artifacts of unimaginable power, and use them to inflict his twisted will on all of reality. Everything the Avengers have fought for has led up to this moment the fate of Earth and existence itself has never been more uncertain.</item>
        <item>In the near future, a ship of space explorers crash land on an unknown planet. Theyre soon met with some of their worst fears as they discover the planet is inhabited by monstrous dinosaurs.</item>
        <item>When an IMF mission ends badly, the world is faced with dire consequences. As Ethan Hunt takes it upon himself to fulfill his original briefing, the CIA begin to question his loyalty and his motives. The IMF team find themselves in a race against time, hunted by assassins while trying to prevent a global catastrophe</item>
        <item>Miles Morales is juggling his life between being a high school student and being a spider-man. When Wilson "Kingpin" Fisk uses a super collider, others from across the Spider-Verse are transported to this dimension.</item>
        <item>Wisecracking mercenary Deadpool battles the evil and powerful Cable and other bad guys to save a boys life.</item>
        <item>Jess, a bellboy working at The Manila Hotel, is gifted an all-expenses paid stay at the hotels most expensive suite. And during his stay, he encounters Veronica, a professional golddigger. Jess keeps up the illusion of being a rich guest of the hotel, hoping to get Veronica to fall in love with him before he has to tell her the truth.</item>
        <item>Once home to the most advanced civilization on Earth, Atlantis is now an underwater kingdom ruled by the power-hungry King Orm. With a vast army at his disposal, Orm plans to conquer the remaining oceanic people and then the surface world. Standing in his way is Arthur Curry, Orms half-human, half-Atlantean brother and true heir to the throne.</item>
        <item>Seasoned musician Jackson Maine discovers — and falls in love with — struggling artist Ally. She has just about given up on her dream to make it big as a singer — until Jack coaxes her into the spotlight. But even as Allys career takes off, the personal side of their relationship is breaking down, as Jack fights an ongoing battle with his own internal demons.</item>
        <item>King TChalla returns home from America to the reclusive, technologically advanced African nation of Wakanda to serve as his countrys new leader. However, TChalla soon finds that he is challenged for the throne by factions within his own country as well as without. Using powers reserved to Wakandan kings, TChalla assumes the Black Panther mantel to join with girlfriend Nakia, the queen-mother, his princess-kid sister, members of the Dora Milaje (the Wakandan special forces) and an American secret agent, to prevent Wakanda from being dragged into a world war.</item>
        <item>Investigative journalist Eddie Brock attempts a comeback following a scandal, but accidentally becomes the host of Venom, a violent, super powerful alien symbiote. Soon, he must rely on his newfound powers to protect the world from a shadowy organization looking for a symbiote of their own.</item>
    </string-array>

    <array name="fotoData">
        <item>@drawable/poster_avengerinfinity</item>
        <item>@drawable/poster_jurassic</item>
        <item>@drawable/poster_mission</item>
        <item>@drawable/poster_spiderman</item>
        <item>@drawable/poster_deadpool</item>
        <item>@drawable/poster_hopepul</item>
        <item>@drawable/poster_aquaman</item>
        <item>@drawable/poster_a_star</item>
        <item>@drawable/poster_black</item>
        <item>@drawable/poster_venom</item>
    </array>

    <string-array name="tanggal_rilis">
        <item>25 April 2018</item>
        <item>20 August 2018</item>
        <item>13 July 2018</item>
        <item>06 December 2018</item>
        <item>10 May 2018</item>
        <item>12 September 2018</item>
        <item>07 December 2018</item>
        <item>03 October 2018</item>
        <item>13 February 2018</item>
        <item>28 September 2018</item>
    </string-array>

    <string-array name="ratingFilm">
        <item>83%</item>
        <item>30%</item>
        <item>73%</item>
        <item>83%</item>
        <item>75%</item>
        <item>37%</item>
        <item>68%</item>
        <item>75%</item>
        <item>74%</item>
        <item>66%</item>

    </string-array>




    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="rating">7.0</string>
    <string name="like">226</string>
    <string name="visitor">452</string>
    <string name="juduls">Bohemian Rhapsody</string>
    <string name="tanggal">12 - 09 - 2018</string>
    <string name="genre">Genre</string>
    <string name="info">Information Film</string>
    <string name="deskripsi">aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa</string>


</resources>
