<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2c3d63"
    tools:context=".DetailFilm">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">



    <ImageView
        android:id="@+id/poster_film"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/bggrad"
        android:fitsSystemWindows="true"
        android:src="@drawable/poster_bohemian"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            style="@style/cardView"
            app:cardCornerRadius="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.299">

            <TextView
                android:id="@+id/get_rating"
                android:layout_marginLeft="25dp"
                android:drawableTop="@drawable/ic_star_half_black_24dp"
                android:text="@string/rating"
                style="@style/textView" />

            <View
                android:layout_width="3dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="100dp"
                android:background="@drawable/gardline" />

            <TextView
                android:layout_marginLeft="125dp"
                style="@style/textView"
                android:drawableTop="@drawable/ic_favorite_black_24dp"
                android:text="@string/like"/>

            <View
                android:layout_width="3dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="200dp"
                android:background="@drawable/gardline" />

            <TextView
                style="@style/textView"
                android:layout_marginLeft="225dp"
                android:drawableTop="@drawable/ic_people_black_24dp"
                android:text="@string/visitor" />


        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        style="@style/cardView2"
        android:layout_marginBottom="20dp"
        app:cardCornerRadius="7dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/cardView3"
        app:layout_constraintTop_toBottomOf="@+id/cardView"
        app:layout_constraintVertical_bias="0.037">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/get_judul"
                style="@style/atribut"
                android:text="@string/juduls"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.03"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/get_date"
                style="@style/tanggal"
                android:text="@string/tanggal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/get_judul"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                style="@style/genre"
                android:text="@string/genre"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/get_date"
                app:layout_constraintVertical_bias="1.0" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView3"
        style="@style/cardView3"
        app:cardCornerRadius="7dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView2">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/iff"
                android:textStyle="bold"
                style="@style/info"
                android:layout_marginTop="8dp"
                android:text="@string/info"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/get_detail"
                style="@style/info"
                android:layout_marginTop="36dp"
                android:layout_marginRight="90dp"
                android:paddingEnd="30dp"
                android:layout_marginBottom="10dp"
                android:text="@string/deskripsi"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>